# file-system-watcher

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
watcher/: __init__.py  logger.py  main.py  observer.py
watcher/Observer/: EventHandler.py
