[project]
name = "G-SyncWeave"
version = "0.1.0"
description = "Real-time filesystem watcher with Python using watchdog and loguru for monitoring file/directory changes with beautiful logging."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "watchdog>=6.0.0",
]
